components/victoria-metrics/configs/home/service-alertmanager.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vmalertmanager-victoria-metrics-k8s-stack-http
  namespace: victoria-metrics
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: victoria-metrics-k8s-stack
    app.kubernetes.io/name: vmalertmanager
    managed-by: vm-operator
  ports:
    - name: http
      port: 9093
      targetPort: web
      protocol: TCP
