components/victoria-metrics/configs/home/service-victoriametrics-otlp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: victoriametrics-otlp
  namespace: victoria-metrics
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/hostname: victoriametrics-otlp
    tailscale.com/tags: tag:k8s-private
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: victoria-metrics-k8s-stack
    app.kubernetes.io/name: vmsingle
    managed-by: vm-operator
  ports:
    - name: http
      port: 8428
      targetPort: 8428
      protocol: TCP
